Add signup api command
Closes #43
